# TaskEase

./: CMakeCache.txt  CMakeLists.txt  Event.cc  Event.h  Makefile  Schedule.cc  Schedule.h  cmake_install.cmake  data  test.cc  translate.cc  translate.h
